2006-07-22  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.complexprofile.create.ave:
	* sample/profileconfiguration.txt:
	* doc/en/dcsewerdesign.xml: Allowing linebreaks using "+NL+" for the
	data box title blocks; implements RFE #1526517
	* dcsewerdesignextension.make.ave: 
	* dcsewerdesign.nsi: Version number is 2.0.10+svn

2006-07-03  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.complexprofile.create.ave:
	* dcsewerdesign.profile.cumulativelinedatabox.create.ave:
	* dcsewerdesign.profile.linedatabox.create.ave:
	* dcsewerdesign.profile.manholedatabox.create.ave: Implemented RFE 
	#1156974 (rotated text).
	* doc/en/dcsewerdesign.xml: Updated for new functionality/release
	* dcsewerdesign.nsi:
	* build.xml:
	* dcsewerdesignextension.make.ave: Version number is 2.0.10 now
	* sample/profileconfiguration.txt: Updated for new release

2006-05-24  Steffen Macke <sdteffen@gmail.com>

	* doc/en/dcsewerdesign.xml:
	* dcsewerdesign.profile.constantgradient.calculate.ave: Implemented
	RFE #1492504 (Direct gradient input)

2006-05-23  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.profile.constantgradient.calculate.ave: Started with
	implementation of RFE #1492504 (Direct gradient input) 
	
2006-05-19  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.createdbfsewercalculation.ave: Forget configuration file
	if the configuration is wrong

2006-05-16  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesignextension.make.ave: version number is 2.0.9+svn now
	* doc/en/dcsewerdesign.xml:
	* dcsewerdesign.accumulatepopulation.ave: Added possibility to
	specify optional fields for maximum accumulated population and 
	difference
	
2006-05-13  Steffen Macke <sdteffen@gmail.com>

	* dcsewerdesign.profile.buildnodelist.ave: Allow a single line 
	selection; fixes bug #1483330
	* dcsewerdesign.complexprofile.create.ave: Better support for profiles
	with non-uniform line directions; fixes bug #1487774